#2 fix spacing and break line files

--- a/bigPractice/src/styles/abstracts/_variable.scss
+++ b/bigPractice/src/styles/abstracts/_variable.scss
@@ -3,9 +3,6 @@ $font-size-xl: 20px;
 $font-size-md: 16px;
 $font-size-sm: 14px;
 
-// font-weight
-$font-weight-xl: 500;
-
 // color
 $color-primary: #475466;
 $color-secondary: #4a4e58;
