--- a/bigPractice/src/styles/components/_button.scss
+++ b/bigPractice/src/styles/components/_button.scss
@@ -7,8 +7,3 @@
   border-radius: 2px;
   font-family: $font-family-primary;
 }
-
-i {
-  padding-right: 6px;
-  padding-bottom: 2px;
-}
