--- a/bigPractice/src/styles/components/_navbar.scss
+++ b/bigPractice/src/styles/components/_navbar.scss
@@ -11,9 +11,6 @@
     color: $color-light;
     font-family: $font-family-secondary;
     padding: 12px;
-
-    &__:hover {
-    }
   }
 }
 
