--- a/bigPractice/src/styles/layouts/_utilities.scss
+++ b/bigPractice/src/styles/layouts/_utilities.scss
@@ -4,3 +4,8 @@
     padding: 20px;
   }
 }
+
+i {
+  padding-right: 6px;
+  padding-bottom: 2px;
+}
